refactor: improve separation of concerns and remove hardcoded values
- Create ProductCreationService to separate product creation responsibility from OrderService
- Add OrderConfiguration to externalize product and status configurations
- Move hardcoded product data to application.properties
- Externalize Kafka topic names and consumer group IDs
- Refactor Order constructor to not set hardcoded status
- Update tests to reflect new service structure
- Add comprehensive tests for ProductCreationService

This change improves code maintainability by:
- Following Single Responsibility Principle more strictly
- Making the system more configurable and flexible
- Removing hardcoded values that could cause issues in different environments
- Improving testability through better separation of concerns

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,30 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
+# Kafka Admin Configuration - não falhar se Kafka não estiver disponível
+spring.kafka.admin.auto-create=false
+spring.kafka.admin.fatal-if-broker-not-available=false
+
+# Order Configuration
+order.product-defaults.system-a[0].name=Produto A
+order.product-defaults.system-a[0].price=100.00
+order.product-defaults.system-a[1].name=Produto B
+order.product-defaults.system-a[1].price=200.00
+
+order.product-defaults.system-b[0].name=Produto C
+order.product-defaults.system-b[0].price=150.00
+order.product-defaults.system-b[1].name=Produto D
+order.product-defaults.system-b[1].price=250.00
+
+order.status-defaults.received=RECEIVED
+order.status-defaults.processed=PROCESSED
+
+# Kafka Topics Configuration
+kafka.topics.order-processed=order-processed
+kafka.topics.system-a=pedidos-sistema-a
+kafka.topics.system-b=pedidos-sistema-b
+kafka.consumer.group-id=order-service-group
+
 # Configurações básicas de segurança
 spring.security.user.name=admin
 spring.security.user.password=admin
